app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css.
 *
 * With Propshaft, assets are served efficiently without preprocessing steps. You can still include
 * application-wide styles in this file, but keep in mind that CSS precedence will follow the standard
 * cascading order, meaning styles declared later in the document or manifest will override earlier ones,
 * depending on specificity.
 *
 * Consider organizing styles into separate files for maintainability.
 */
* {
    margin: 0;
}
body {
    height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: #222831;
    color: #FAf9f9;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

main {
    flex-grow: 1;
}



.notice-container {
    height: 8px;
    margin-left: 16px;
    display: flex;
    color: green;
    font-size: medium;
    font-style: italic;
}

.profile-header {
    display: flex;
    align-items: center;
    background-color: #393e46;
    color:#FAf9f9;
    gap: 24px;
    padding: 8px;
}

a {
    text-decoration: none;
    color: #FAf9f9;
    font-size: large;
    padding: 8px;
    border-radius: 5px;
    transition: all 0.3s ease-in-out;
}

a:hover,
a:focus,
.post a:hover,
.post a:focus {
    background-color: #FAf9f9;
    color: #393e46;
}

.skip-div {
    background-color: #393e46;
}
.skip-link {
    font-size: medium;
    opacity: 0;
    transition: opacity 0.25s ease-in;
    padding: 4px 8px 4px 8px;
}
.skip-link:focus {
    background-color: #FAf9f9;
    opacity: 1;
}
.skip-link a {
    font-size: medium;
}

p a {
    padding: 4px;
}

 .alert {
    color: red;
 }

.navbar {
    display: grid;
    grid-template-columns: repeat( auto-fit, minmax(120px, 1fr) );;
    height: 3rem;
    background-color: #393e46;
    height: 10vh;
    justify-items: center;
    align-items: center;
    padding: 1vh;
}
 .nav-links, .login-links {
    padding-left: 3rem;
 }

 .login-links {
    justify-content: end;
    padding-right: 3rem;
 }

/* Below for post styling */


 .post-display {
    display: grid;
    gap: 8px;
    /* The below CSS is for auto-arranging multiple posts */
    /* grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); */
 }

 .post-page h2 {
    background-color: #FAf9f9;
    padding: 15px;
 }

 /* DRY code and add flex for column centering below: */
.post,
.new-post,
.user,
.bio-wrapper,
.bio-section,
.comments-section,
.comment-wrapper,
.displayed-comment,
.new-comment,
.form,
.page-wrapper,
 .post-wrapper,
 .user-wrapper, 
.login-wrapper,
.user-page,
footer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}


/* DRY code by adding background colors here */
.post,
.new-post,
.user,
.bio-wrapper,
.bio-section,
.comments-section,
.comment-wrapper,
.displayed-comment,
.new-comment {
    background-color: #393e46;
    padding: 8px;
    border-radius: 10px;
    width: 75vw;
}

.page-wrapper,
 .post-wrapper,
 .user-wrapper, 
 .comments-section,
.comment-wrapper {
    background-color: #222831;
    margin: 16px;
    gap: 16px;
 }

 .user-page {
    gap: 8px;
    width: 75vw;
    align-items: space-around;
}

.bio-section {
    background-color: #222831;
    gap: 8px;
}

.new-post {
    align-items: center;
    width: 50vw;
    min-width: 300px;
}

.post a {
    background-color: #393e46;
    color: #FAf9f9
}

.post p, 
.post a {
    margin: 8px;
}

.title {
    font-size: 1.5rem;
    font-weight: 700;
}

.author {
    font-size: 1.3rem;
    font-weight: 700;
}

.post-body, 
.likes {
    font-size: 1.2rem;
}

.like-buttons button,
.post-btn,
.user .follow-btn,
.comment-btn {
    background-color: #FAf9f9;
    border: 1px solid #393e46;
    font-size: 1rem;
    padding: 8px;
    border-radius: 5px;
    color:#393e46;
}

/* Below for post Show styling */
.form-title,
.post-title {
    font-size: 1.3rem;
    font-weight: 500;
}

.login-wrapper,
.user-page {
    background-color: #222831;
    margin: 14px 0;
}

.form {
    background-color: #393e46;
    width: 50vw;
    max-width: 500px;
    gap: 8px;
    border-radius: 5px;
    padding: 16px 0;
    min-width: 280px;
}

.form-new-post {
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.post-title p,
#post_title {
    font-size: large;
}

.oauth-buttons {
    display: flex;
    justify-content: space-around;
    width: 50%;
}
.oauth-buttons .button_to {
    width: 75px;
    height: 125px;
}
.hint {
    font-size: smaller;
}
.post-btn {
    background-color: #555B6E;
    color: #FAf9f9;
}
.new-post {
    padding: 16px;
    gap: 16px;
}

/* Users index below */
.user {
    min-width: 300px;
}

.user-display,
.invitation{
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 75vw;
    align-items: center;
}

.inv-btn {
    display: flex;
    justify-content: start;
    align-items: center;
}

.invitation {
    justify-content: space-evenly;
    /* gap: 120px; */
}

.inv-btn .accept {
    background-color: #98b464;
}
.inv-btn .decline {
    background-color: #d67229;
}

/* Users show page */


.avatar {
    width: 25vw;
    height: 25vw;
}

footer {
    height: 10vh;
    background-color: #393e46;
    margin-top: 24px;
    margin-bottom: 0;
}

